<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lumen_bringup</name>
  <version>1.0.0</version>
  <description>A ros2 package for lumen SLAM.</description>
  <maintainer email="anaskherro@gmail.com">ak</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>rplidar_ros</depend>
  <depend>robot_localization</depend>
  <depend>slam_toolbox</depend>
  <depend>tf2_ros</depend>
  <depend>nav2_bringup</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
